samples/_failures_safe/1761171196_1a7336_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7230c62.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d7230c62.c:169:17: error: expected declaration or statement at end of input
  169 |                 col++;
      |                 ^~~
./samples/SAFE/__tmp_d7230c62.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7230c62.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7230c62.c:169:17: error: expected declaration or statement at end of input
